--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,17 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "@types/pg": "^8.11.10",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.1",
+    "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
+    "pg": "^8.13.1",
     "winston": "^3.17.0"
   }
 }
