--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/server.ts",
-    "docker:up": "docker-compose --env-file ./.env up"
+    "docker:up": "docker-compose --env-file ./.env up",
+    "db:migrate": "npx drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,6 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@paralleldrive/cuid2": "^2.2.2",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
