--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,6 +8,8 @@
     "skipLibCheck": true,
     "outDir": "./dist",
     "baseUrl": ".",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "paths": {
       "@server/*": ["./src/*"]
     }
