--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,8 @@
     "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
-    "inversify": "^6.2.1",
     "pg": "^8.13.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.1"
   }
 }
