--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
     "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "winston": "^3.17.0",
     "zod": "^3.24.1"
   }
