--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,11 +7,7 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "baseUrl": ".",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "paths": {
-      "@server/*": ["./src/*"]
-    }
+    "emitDecoratorMetadata": true
   }
 }
