--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/pg": "^8.11.10",
     "nodemon": "^3.1.9",
@@ -26,6 +27,7 @@
     "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "winston": "^3.17.0",
